# xiaozhi-kr-doc

./: .gitignore  README.md  pyproject.toml
scripts/: archive_feishu.py  build_github_wiki.py
src/xiaozhi_archive/: __init__.py  assets.py  cli.py  feishu.py  github_wiki.py  links.py  ssr.py
